<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/task_edit_title_hint"
        android:autofillHints=""
        android:textColor="@color/colorPrimaryDark"
        android:textSize="26sp" />

    <EditText
        android:id="@+id/task_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_edit_description_hint"
        android:inputType="text|textMultiLine"
        android:autofillHints=""
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/task_sortorder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/task_edit_sort_hint"
        android:autofillHints=""
        android:textColor="@color/design_default_color_primary" />

    <Button
        android:id="@+id/task_edit_submit_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@android:drawable/ic_menu_save"
        android:text="@string/task_edit_submit"/>
</LinearLayout>