<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TaskEditActivityFragment"
    tools:showIn="@layout/activity_task_edit"
    android:id="@+id/content_add_edit">

    <EditText
        android:id="@+id/task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/task_edit_title_hint"
        android:inputType="text"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="26sp" />

    <EditText
        android:id="@+id/task_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/task_edit_description_hint"
        android:inputType="text|textMultiLine"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/task_sortorder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/task_edit_sort_hint"
        android:inputType="number"
        android:textColor="@color/design_default_color_primary" />

    <Button
        android:id="@+id/task_edit_submit_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:drawableStart="@android:drawable/ic_menu_save"
        android:text="@string/task_edit_submit" />
</LinearLayout>