<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="?attr/dialogPreferredPadding"
    android:paddingLeft="?attr/dialogPreferredPadding"
    android:paddingEnd="?attr/dialogPreferredPadding"
    android:paddingRight="?attr/dialogPreferredPadding"
    android:paddingBottom="?attr/dialogPreferredPadding">

    <TextView
        android:id="@+id/about_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="viewEnd"
        android:textColor="@android:color/primary_text_light" />

    <View
        android:layout_marginTop="10dp"
        android:id="@+id/about_line"
        android:layout_width="fill_parent"
        android:layout_height="1.5dp"
        android:background="#c0c0c0"/>

    <TextView
        android:id="@+id/about_copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/about_copyright"
        android:textColor="@android:color/secondary_text_dark_nodisable" />

    <TextView
        android:id="@+id/about_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autoLink="web"
        android:text="@string/about_info"
        android:textColor="@android:color/secondary_text_dark_nodisable" />

    <TextView
        android:id="@+id/about_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autoLink="email"
        android:text="@string/about_contact"
        android:textColor="@android:color/secondary_text_dark_nodisable" />
</LinearLayout>